--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.2",
+    "@chakra-ui/react": "^3.0.0",
     "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
     "@fontsource/open-sans": "^5.1.0",
     "@fontsource/oxygen": "^5.1.0",
     "@fontsource/raleway": "^5.1.0",
@@ -15,8 +14,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.11.9",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
